Added hero section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                     <form class="headerBottomForm">
                         <div class="formSearchBox">
                             <input class="headerBottomFormInput" type="text" placeholder="Qidirish">
-                            <div class="iconBoxs"> <p  class="leftBtn"><i id="mic-button" class="bi bi-mic "></i></p>  <p class="rightBtn"><i class="bi bi-search "></i></p>    </div>
+                            <div class="iconBoxs">
+                                <p class="leftBtn"><i id="mic-button" class="bi bi-mic "></i></p>
+                                <p class="rightBtn"><i class="bi bi-search "></i></p>
+                            </div>
                         </div>
                     </form>
                     <div class="headerBottomUserBox">
@@ -99,6 +102,60 @@
             </div>
         </div>
     </header>
+
+    <section>
+        <div class="containerSection">
+            <img class="stockImage" src="./assets/images/IMAGE.png" alt="">
+        </div>
+    </section>
+
+    <section class="firmSection">
+        <div class="containerFirm">
+            <div class="firmContainer"><img class="firmImages" src="/assets/images/Lg.png" alt=""></div>
+            <div class="firmContainer"><img class="firmImages"
+                    src="/assets/images/7160cc7e-711b-44bb-a6dc-77dca7ec4924.webp" alt=""></div>
+            <div class="firmContainer"><img class="firmImages" style="width: 110px;"
+                    src="/assets/images/db9c48fb-a175-4ff9-ab06-bd953ddc82cd-medium.webp" alt=""></div>
+            <div class="firmContainer"><img class="firmImages" style="width: 110px;"
+                    src="./assets/images/dd3aeb98-802f-4ddd-9d07-c1abd4b1a482-medium.webp" alt=""></div>
+            <div class="firmContainer"><img class="firmImages" style="width: 110px; height: 24px;"
+                    src="/assets/images/ad04313a-6046-4404-93f4-c0f64e57289d-medium.png" alt=""></div>
+            <div class="firmContainer"><img class="firmImages"
+                    src="/assets/images/e9c04fcd-5ed8-41f8-b417-a8f190a77de1 (1).svg" alt=""></div>
+            <div class="firmContainer"><img class="firmImages" src="/assets/images/Apple.png" alt=""></div>
+            <div class="firmContainer"><img class="firmImages"
+                    src="/assets/images/c53e8986-c05a-4af7-b5a6-adafe1f04bff.webp" alt=""></div>
+            <div class="firmContainer"><img class="firmImages" style="width: 110px;"
+                    src="/assets/images/409cc1aa-92c8-403e-96fc-f0e3dc15da92-medium.webp" alt=""></div>
+        </div>
+    </section>
+
+    <section class="categoryBox">
+        <div class="containerFirm">
+            <div class="categoryContainerOne categoryContainer">
+                <p class="categoryContainerTitle">Смарфоны</p>
+            </div>
+            <div class="categoryContainerTwo categoryContainer">
+                <p class="categoryContainerTitle">Кондиционеры</p>
+            </div>
+            <div class="categoryContainerThree categoryContainer">
+                <p class="categoryContainerTitle">Пылесосы</p>
+            </div>
+            <div class="categoryContainerFor categoryContainer">
+                <p class="categoryContainerTitle">Холодильники</p>
+            </div>
+            <div class="categoryContainerFive categoryContainer">
+                <p class="categoryContainerTitle">Ноутбуки</p>
+            </div>
+            <div class="categoryContainerSix categoryContainer">
+                <p class="categoryContainerTitle">Телевизоры</p>
+            </div>
+            <div class="categoryContainerSeven categoryContainer">
+                <p class="categoryContainerTitle">КофеМашины</p>
+            </div>
+        </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
