--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Texnomart</title>
+    <title>Texnomart clone</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
@@ -77,7 +77,7 @@
                     </div>
                     <div class="headerBottomBasketsBox">
                         <i class="bi bi-cart3 cartIcon"></i>
-                        <p><a class="text-decoration-none text-dark" href="#Саватча">Саватча</a></p>
+                        <p><a class="text-decoration-none text-dark" href="/html/basket.html">Саватча</a></p>
                     </div>
                 </div>
 
@@ -116,7 +116,7 @@
                 </div>
                 <button class="js-tovars-add-basket-btn btn btn-warning">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" style="width: 20px; height: 20px; color: #fff;">
+                        stroke="currentColor" style="width: 20px; height: 20px; color: #fff;" class="js-basket-icon">
                         <path stroke-linecap="round" stroke-linejoin="round"
                             d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
                     </svg>
@@ -193,7 +193,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-        <script src="./javascript/tovars.js"></script>
+    <script src="./javascript/utils.js"></script>
+    <script src="./javascript/tovars.js"></script>
     <script src="./javascript/main.js"></script>
 </body>
 
