Add news array and render news

--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
             </div>
         </li>
     </template>
+    <template class="js-news-temp news-temp">
+        <li class="news-li">
+            <img src="" class="js-news-img" alt="">
+            <h6 class="js-news-date"></h6>
+            <p class="js-news-title"></p>
+
+        </li>
+    </template>
     <main>
         <section>
             <div class="containerSection">
@@ -186,6 +194,8 @@
                 <ul class="js-xit-list tovars-lists  my-3"></ul>
                 <h1 class="tovars-block-title">Тўпламлар</h1>
                 <ul class="js-colection-list tovars-lists  my-3"></ul>
+                <h1 class="tovars-block-title">Янгиликлар ва блоглар</h1>
+                <ul class="js-news-list tovars-lists  my-3"></ul>
             </div>
         </section>
     </main>
@@ -196,6 +206,7 @@
         crossorigin="anonymous"></script>
     <script src="./javascript/utils.js"></script>
     <script src="./javascript/tovars.js"></script>
+    <script src="./javascript/news.js"></script>
     <script src="./javascript/main.js"></script>
 </body>
 
