Add download program

--- a/index.html
+++ b/index.html
@@ -198,6 +198,18 @@
                 <ul class="js-news-list tovars-lists  my-3"></ul>
             </div>
         </section>
+        <section>
+            <div class="download-program-box">
+                <div>
+                    <img src="./assets/images/progImg.png" class="imgProg" alt="">
+                </div>
+                <div class="scaner-box">
+                    <h2>Иловани юкланг</h2>
+                    <p>Ҳаридларни уйдан чиқмаган ҳолда мобил илова орқали амалга оширинг!</p>
+                    <div class="qr-box"><img src="./assets/images/qr.png" alt=""> <p>Камерани йўналтиринг ва Texnomart иловасини бепул юкланг</p></div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
